packages/preview/sprintf/0.1.0/.nim_runtime/tests/errmsgs/trecursiveproctype3.nim
discard """
  errormsg: "illegal recursion in type 'ptr MyFunc'"
  line: 9
"""

# issue #19271

type
  MyFunc = proc(f: ptr MyFunc)
